Maxmeal done - I wish I could be as smart as the one who made the maxmeal algo ...

--- a/philo_one/Makefile
+++ b/philo_one/Makefile
@@ -6,6 +6,8 @@ SRCS = main.c utils.c init.c actions.c
 
 OBJS = ${SRCS:.c=.o}
 
+DEBUG = -g -fsanitize=address
+
 # ifndef VERBOSE
 # .SILENT:
 # endif
@@ -18,8 +20,15 @@ all: $(NAME)
 $(NAME): $(OBJS)
 	gcc $(FLAGS) $(SRCS) -o $(NAME)
 
-run: $(NAME)
-	./philo_one 5 300 100 100
+run1: $(NAME)
+	./philo_one 4 410 200 200
+
+run2: $(NAME)
+	./philo_one 4 310 200 100
+
+run3: $(NAME)
+	./philo_one 4 410 200 200 2
+
 clean:
 	rm -f $(OBJS)
 
